# dom_u_gnoma

./: .gitignore  README.md  pyproject.toml  requirements.txt
dom_u_gnoma/: manage.py
dom_u_gnoma/about/: urls.py  views.py
dom_u_gnoma/admin_panel/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  utils.py  views.py
dom_u_gnoma/admin_panel/migrations/: 0001_initial.py
dom_u_gnoma/cart/: admin.py  models.py  urls.py  utils.py  views.py
dom_u_gnoma/cart/migrations/: 0001_initial.py  0002_cart_user_item_unique.py
dom_u_gnoma/dom_u_gnoma/: asgi.py  settings.py  urls.py  wsgi.py
dom_u_gnoma/items/: models.py  urls.py  utils.py  views.py
dom_u_gnoma/items/migrations/: 0001_initial.py  0003_cart.py  0004_alter_item_options_item_is_published.py  0005_alter_cart_options.py  0006_delete_cart.py  0007_item_order.py  0008_alter_item_order.py
dom_u_gnoma/orders/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
dom_u_gnoma/orders/migrations/: 0001_initial.py  0002_order_checked.py  0003_order_created_delete_orderitem.py  0004_alter_order_created.py  0005_alter_order_created.py
dom_u_gnoma/templates/: base.html
dom_u_gnoma/users/: apps.py  forms.py  models.py  signals.py  urls.py  utils.py  views.py
items/: admin.py  apps.py  models.py
items/migrations/: 0002_alter_item_image_alter_item_weight.py
natali_catcher/: manage.py
natali_catcher/natali_catcher/: asgi.py  settings.py  urls.py  wsgi.py
users/: admin.py  models.py
users/migrations/: 0002_alter_user_last_name_alter_user_send_messages.py
(+30 files in other folders)
