[tool.poetry]
name = "natali-catcher"
version = "0.1.0"
description = ""
license = "BSD 3-Clause License"
authors = ["Valeriy Kirichenko <https://github.com/valeriy-kirichenko>"]
readme = "README.md"
packages = [{include = "natali_catcher"}]

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.1.3"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
