[tool.poetry]
name = "natali-catcher"
version = "0.1.0"
description = ""
license = "BSD 3-Clause License"
authors = ["Valeriy Kirichenko <https://github.com/valeriy-kirichenko>"]
readme = "README.md"
packages = [{include = "dom_u_gnoma"}]

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.1.3"
googletrans = "3.1.0a0"
pillow = "^9.3.0"
djlint = "^1.19.7"
sorl-thumbnail = "^12.9.0"
python-dotenv = "^0.21.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
django-debug-toolbar = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
